feat: add Vercel Blob integration for file uploads and update README with environment variable instructions

--- a/.env.example
+++ b/.env.example
@@ -13,6 +13,14 @@ NEXT_PUBLIC_FIREBASE_APP_ID=
 # Optional: Firestore local cache mode in the browser (memory|persistent)
 NEXT_PUBLIC_FIRESTORE_CACHE=memory
 
+# Optional: Firestore emulator (local dev)
+# FIRESTORE_EMULATOR_HOST=localhost:8080
+# NEXT_PUBLIC_FIREBASE_EMULATOR_HOST=localhost:8080
+
+# Required for uploads: Vercel Blob Read/Write token
+# Obtain from Vercel > Storage > Blob > Tokens
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_RKZUTiOcNz7fdUQU_hqzJrfLwCIAJ4S96m2BM43MFUMPlLn
+
 # Optional: git metadata (Render provides these automatically)
 NEXT_PUBLIC_GIT_BRANCH=
 NEXT_PUBLIC_LAST_COMMIT_HASH=
