feat: add stock matrix report card to reports page
feat: enhance login form with ASCII character restriction and toast notifications

fix: update feedback widget to use centralized ticket ID generation

feat: implement mobile sidebar auto-close on navigation

feat: add TRS code generation for stock transfers in inventory context

feat: extend dictionaries with date shortcuts and stock matrix report labels

refactor: update feedback ticket ID generation to use Firestore transactions

--- a/.env.example
+++ b/.env.example
@@ -26,6 +26,17 @@ NEXT_PUBLIC_GIT_BRANCH=
 NEXT_PUBLIC_LAST_COMMIT_HASH=
 NEXT_PUBLIC_LAST_COMMIT_DATE=
 
+# Genkit / Google Generative AI (Gemini)
+# At least one of these should be set for translation to work
+GEMINI_API_KEY=AIzaSyBqG2ZSUPLtlJR-yKBPKqkaMw-5d672Gmk
+# Or alternatively:
+# GOOGLE_API_KEY=
+# GOOGLEAI_API_KEY=
+# GOOGLE_GENERATIVE_AI_API_KEY=
+
+# Optional: override default model
+# GENKIT_MODEL=googleai/gemini-2.0-flash
+
 # Notes:
 # - NEXT_PUBLIC_* vars are compiled into the client bundle at build time.
 # - On Firebase App Hosting and Render, define these in the dashboard BEFORE build.
