feat: implement negative stock maintenance feature with auto-fix functionality and UI integration

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -13,6 +13,20 @@
 				"$npm-stylish"
 			],
 			"group": "build"
+		},
+		{
+			"label": "Run dev server",
+			"type": "shell",
+			"command": "npm",
+			"args": [
+				"run",
+				"dev"
+			],
+			"isBackground": true,
+			"problemMatcher": [
+				"$tsc"
+			],
+			"group": "build"
 		}
 	]
 }
