--- a/.firebaserc
+++ b/.firebaserc
@@ -1,6 +1,7 @@
 {
   "projects": {
-    "estatecare": "estatecare"
+  "estatecare": "estatecare",
+  "sample": "sample-firebase-ai-app-55f54"
   },
   "targets": {},
   "etags": {}
