feat: enhance order management and inventory handling
- Added navigation back to orders list after approving an order.
- Removed negative stock auto-fix functionality from inventory page.
- Implemented admin/supervisor guard for receiving actions to prevent unauthorized access.
- Improved approval process for MRV requests with better error handling and user feedback.
- Introduced a loading state for approval buttons to prevent multiple submissions.
- Updated inventory context to handle item names more flexibly during stock issuance.
- Enhanced order receiving logic to ensure all items are validated before processing.
- Added new QuantityStepper component for better quantity management in UI.
- Updated toast notifications to include warning styles for gentle alerts.
- Refactored inventory context to improve error handling and permission checks.
- Created new telemetry files for future analytics integration.

--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
-  "estatecare": "estatecare",
-  "sample": "sample-firebase-ai-app-55f54"
+    "default": "sample-firebase-ai-app-55f54",
+    "estatecare": "estatecare",
+    "sample": "sample-firebase-ai-app-55f54"
   },
   "targets": {},
   "etags": {}
