feat: Implement MRV attachment upload functionality and enhance Firestore rules

--- a/.env.local.example_appcheck
+++ b/.env.local.example_appcheck
@@ -2,3 +2,4 @@
 # Set to 'true' to enable debug token in dev, and provide your reCAPTCHA v3 site key
 NEXT_PUBLIC_APPCHECK_DEBUG=true
 NEXT_PUBLIC_APPCHECK_SITE_KEY=your_recaptcha_v3_site_key
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_RKZUTiOcNz7fdUQU_hqzJrfLwCIAJ4S96m2BM43MFUMPlLn
