--- a/.env.production
+++ b/.env.production
@@ -5,3 +5,4 @@ NEXT_PUBLIC_FIREBASE_PROJECT_ID=sample-firebase-ai-app-55f54
 NEXT_PUBLIC_FIREBASE_STORAGE_BUCKET=sample-firebase-ai-app-55f54.firebasestorage.app
 NEXT_PUBLIC_FIREBASE_MESSAGING_SENDER_ID=1040876414631
 NEXT_PUBLIC_FIREBASE_APP_ID=1:1040876414631:web:635e2082a3cea9333add82
+BLOB_READ_WRITE_TOKEN=vercel_blob_rw_RKZUTiOcNz7fdUQU_hqzJrfLwCIAJ4S96m2BM43MFUMPlLn
